@@ -13,7 +13,6 @@ import java.util.Map;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import org.opensmartgridplatform.cucumber.core.RetryableAssert;
 import org.opensmartgridplatform.cucumber.platform.PlatformDefaults;
 import org.opensmartgridplatform.cucumber.platform.PlatformKeys;
@@ -49,7 +48,7 @@ public class AuditTrail {
               this.deviceLogItemRepository.findByDeviceIdentification(
                   deviceIdentification, pageable);
           final List<DeviceLogItem> filteredDeviceLogItems =
-              deviceLogPage.getContent().stream().filter(filter).collect(Collectors.toList());
+              deviceLogPage.getContent().stream().filter(filter).toList();
 
           assertThat(filteredDeviceLogItems.size() < minimumNumberReturned)
               .as(
