@@ -5,7 +5,6 @@
 package org.opensmartgridplatform.secretmanagement.application.endpoints;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.apache.tomcat.util.buf.HexUtils;
 import org.opensmartgridplatform.secretmanagement.application.domain.SecretType;
 import org.opensmartgridplatform.secretmanagement.application.domain.TypedSecret;
@@ -24,7 +23,7 @@ public class SoapEndpointDataTypeConverter {
     }
     final List<org.opensmartgridplatform.ws.schema.core.secret.management.SecretType>
         soapSecretTypeList = soapSecretTypes.getSecretType();
-    return soapSecretTypeList.stream().map(this::convertToSecretType).collect(Collectors.toList());
+    return soapSecretTypeList.stream().map(this::convertToSecretType).toList();
   }
 
   public List<TypedSecret> convertToTypedSecrets(final TypedSecrets soapTypedSecrets)
@@ -34,9 +33,7 @@ public class SoapEndpointDataTypeConverter {
     }
     final List<org.opensmartgridplatform.ws.schema.core.secret.management.TypedSecret>
         soapTypedSecretsList = soapTypedSecrets.getTypedSecret();
-    return soapTypedSecretsList.stream()
-        .map(this::decryptAndConvertSoapTypedSecret)
-        .collect(Collectors.toList());
+    return soapTypedSecretsList.stream().map(this::decryptAndConvertSoapTypedSecret).toList();
   }
 
   public TypedSecrets convertToSoapTypedSecrets(final List<TypedSecret> typedSecrets) {
